[package]
name = "dy"
version = "0.1.0"
authors = ["lito0210@outlook.com"]
edition = "2021"
description = "dy spider"
include = ["src"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [features]

[dependencies]
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2.25"
# console-subscriber = "*"
anyhow = "1.0.57"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
crossbeam-channel = "0.5.4"
clap = { version = "3.1.17", features = ["derive"] }
indicatif = "0.17.0-rc.10"
# openssl = { version = "0.10", features = ["vendored"] }

[dependencies.tokio]
version = "1.7"
features = ["rt-multi-thread", "macros", "fs"]

[target.'cfg(target_os = "linux")'.dependencies]
openssl-sys = { version = "0.9.66", features = ["vendored"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[[example]]
name = "demo1"
path = "/root/rustproject/dy/example/demo1.rs"
