[package]
name = "dy"
version = "0.1.0"
authors = ["lito0210@outlook.com"]
edition = "2021"
description = "dy spider"
include = ["src"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [features]

[dependencies]
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2.25"
anyhow = "1.0.57"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
crossbeam-channel = "0.5.4"
clap = { version = "3.1.17", features = ["derive"] }
indicatif = "0.17.0-rc.10"
axum = { version = "0.5.17", features = ["json", "headers", "axum-macros"] }
fern = "0.6.1"
log = "0.4.17"
chrono = "0.4.23"
# askama = { git = "https://github.com/djc/askama.git", features = ["with-axum"] }

# # askama_axum = {git = "https://github.com/djc/askama" }
tower = "0.4.13"
jsonwebtoken = "8.1.1"
headers = "0.3.8"
async-trait = "0.1.58"
once_cell = "1.16.0"
# utoipa-swagger-ui = { version = "2.0.2", features = ["axum"] }
#https://github.com/juhaku/utoipa/tree/80c449aeeaa98c6b5e9825007709264d1996cc6d/utoipa-swagger-ui
# encoding = "0.2.33"

[dependencies.tokio]
version = "1.7"
features = ["rt-multi-thread", "macros", "fs"]

[target.'cfg(target_os = "linux")'.dependencies]
openssl-sys = { version = "0.9.66", features = ["vendored"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "runcli"
path = "src/bin/runcli.rs"
[[bin]]
name = "apiserver"
path = "src/bin/api_server.rs"

[[example]]
name = "demo1"
path = "/vdb/dy/example/demo1.rs"
[[example]]
name = "demo2"
path = "/vdb/dy/example/demo2.rs"
